--- a/css/attamatic.css
+++ b/css/attamatic.css
@@ -1,7 +1,7 @@
 .version.attamatic /* version checker */
 {
-	color: #000003;
-	background-color: #29923A;
+	color: #00001A;
+	background-color: #6F1B08;
 }
 
 #muse_css_mq
@@ -13,7 +13,7 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 499.9241758241769px;
+	min-height: 499.8618303241774px;
 	background-image: none;
 	border-width: 0px;
 	border-color: transparent;
@@ -163,7 +163,7 @@
 
 #u20990
 {
-	z-index: 226;
+	z-index: 274;
 	width: 390px;
 	background-color: transparent;
 	margin-left: 285px;
@@ -359,7 +359,7 @@
 
 #u21021
 {
-	z-index: 235;
+	z-index: 283;
 	width: 960px;
 	background-color: transparent;
 	margin-top: 71px;
@@ -372,9 +372,9 @@
 	width: 560px;
 	min-height: 116px;
 	background-color: transparent;
+	line-height: 24px;
 	color: #E2E2E2;
 	font-size: 15px;
-	line-height: 24px;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	margin-left: 400px;
@@ -384,12 +384,12 @@
 
 #u21018-7
 {
-	z-index: 228;
+	z-index: 276;
 	width: 560px;
 	background-color: transparent;
+	line-height: 24px;
 	color: #E2E2E2;
 	font-size: 15px;
-	line-height: 24px;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	margin-left: 400px;
@@ -528,10 +528,10 @@
 	border-color: transparent;
 	background-color: transparent;
 	padding: 10px;
+	line-height: 42px;
 	color: #999999;
 	text-align: center;
 	font-size: 30px;
-	line-height: 42px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 }
 
@@ -549,10 +549,10 @@
 	border-color: transparent;
 	background-color: transparent;
 	padding: 10px;
+	line-height: 42px;
 	color: #999999;
 	text-align: center;
 	font-size: 30px;
-	line-height: 42px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	left: 280px;
 }
@@ -590,7 +590,7 @@
 
 #u21034-9
 {
-	z-index: 237;
+	z-index: 285;
 	width: 559px;
 	background-color: transparent;
 	color: #E2E2E2;
@@ -627,8 +627,8 @@
 	z-index: 126;
 	width: 463px;
 	background-color: transparent;
-	font-size: 16px;
 	line-height: 24px;
+	font-size: 16px;
 	font-family: quicksand, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -775,7 +775,7 @@
 
 #u21086
 {
-	z-index: 267;
+	z-index: 315;
 	width: 395px;
 	background-color: transparent;
 	position: relative;
@@ -784,7 +784,7 @@
 
 #u21045-10
 {
-	z-index: 246;
+	z-index: 294;
 	width: 559px;
 	background-color: transparent;
 	color: #E2E2E2;
@@ -903,10 +903,10 @@
 	border-color: transparent;
 	background-color: transparent;
 	padding: 10px;
+	line-height: 42px;
 	color: #999999;
 	text-align: center;
 	font-size: 30px;
-	line-height: 42px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 }
 
@@ -924,10 +924,10 @@
 	border-color: transparent;
 	background-color: transparent;
 	padding: 10px;
+	line-height: 42px;
 	color: #999999;
 	text-align: center;
 	font-size: 30px;
-	line-height: 42px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	left: 279px;
 }
@@ -955,7 +955,7 @@
 
 #u21119-11
 {
-	z-index: 256;
+	z-index: 304;
 	width: 559px;
 	min-height: 309px;
 	background-color: transparent;
@@ -990,7 +990,7 @@
 
 #u21561
 {
-	z-index: 269;
+	z-index: 317;
 	width: 960px;
 	background-color: transparent;
 	left: -3px;
@@ -1017,40 +1017,441 @@
 	position: relative;
 }
 
-#u19721-29
+#u19721-21
 {
-	z-index: 197;
+	z-index: 215;
 	width: 370px;
 	min-height: 200px;
 	background-color: transparent;
 	padding-left: 15px;
 	padding-top: 5px;
 	padding-right: 15px;
-	color: #E2E2E2;
 	line-height: 21px;
+	color: #E2E2E2;
 	font-family: quicksand, sans-serif;
 	position: relative;
 	margin-right: -10000px;
 }
 
-#u19721-6,#u19721-10,#u19721-14,#u19721-15
+#u19721-3
+{
+	font-size: 1px;
+	line-height: 0px;
+}
+
+#u24340
+{
+	z-index: 223;
+	width: 117px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: transparent;
+}
+
+#u24344-4
+{
+	z-index: 224;
+	width: 53px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u24344-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 53px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u24344-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 53px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u24344-4:hover p,#u24344-4:hover span,#u24344-4:active p,#u24344-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24345-4
+{
+	z-index: 228;
+	width: 64px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 20px;
+}
+
+#u24345-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 64px;
+	margin: 20px -10000px 0px 0px;
+}
+
+#u24345-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 64px;
+	margin: 20px -10000px 0px 0px;
+}
+
+#u24345-4:hover p,#u24345-4:hover span,#u24345-4:active p,#u24345-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24346-4
+{
+	z-index: 232;
+	width: 115px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 40px;
+}
+
+#u24346-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 115px;
+	margin: 40px -10000px 0px 0px;
+}
+
+#u24346-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 115px;
+	margin: 40px -10000px 0px 0px;
+}
+
+#u24346-4:hover p,#u24346-4:hover span,#u24346-4:active p,#u24346-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24347-4
+{
+	z-index: 236;
+	width: 99px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 61px;
+}
+
+#u24347-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 99px;
+	margin: 61px -10000px 0px 0px;
+}
+
+#u24347-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 99px;
+	margin: 61px -10000px 0px 0px;
+}
+
+#u24347-4:hover p,#u24347-4:hover span,#u24347-4:active p,#u24347-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24348-4
+{
+	z-index: 240;
+	width: 69px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 81px;
+}
+
+#u24348-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 69px;
+	margin: 81px -10000px 0px 0px;
+}
+
+#u24348-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 69px;
+	margin: 81px -10000px 0px 0px;
+}
+
+#u24348-4:hover p,#u24348-4:hover span,#u24348-4:active p,#u24348-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24349-4
+{
+	z-index: 244;
+	width: 18px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 101px;
+}
+
+#u24349-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 18px;
+	margin: 101px -10000px 0px 0px;
+}
+
+#u24349-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 18px;
+	margin: 101px -10000px 0px 0px;
+}
+
+#u24349-4:hover p,#u24349-4:hover span,#u24349-4:active p,#u24349-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24341-4
+{
+	z-index: 248;
+	width: 56px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 121px;
+}
+
+#u24341-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 56px;
+	margin: 121px -10000px 0px 0px;
+}
+
+#u24341-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 56px;
+	margin: 121px -10000px 0px 0px;
+}
+
+#u24341-4:hover p,#u24341-4:hover span,#u24341-4:active p,#u24341-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24342-4
+{
+	z-index: 252;
+	width: 69px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 141px;
+}
+
+#u24342-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 69px;
+	margin: 141px -10000px 0px 0px;
+}
+
+#u24342-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 69px;
+	margin: 141px -10000px 0px 0px;
+}
+
+#u24342-4:hover p,#u24342-4:hover span,#u24342-4:active p,#u24342-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24343-4
+{
+	z-index: 256;
+	width: 75px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 161px;
+}
+
+#u24343-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 75px;
+	margin: 161px -10000px 0px 0px;
+}
+
+#u24343-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 75px;
+	margin: 161px -10000px 0px 0px;
+}
+
+#u24343-4:hover p,#u24343-4:hover span,#u24343-4:active p,#u24343-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u19721-6,#u19721-7
 {
 	font-weight: 400;
 }
 
-#u19721-2,#u19721-17
+#u19721-2,#u19721-9
 {
 	font-size: 14px;
 	font-weight: 700;
 }
 
-#u19721-19,#u19721-21,#u19721-23,#u19721-25,#u19721-27
+#u19721-11,#u19721-13,#u19721-15,#u19721-17,#u19721-19
 {
 	font-size: 14px;
 	font-weight: 400;
 }
 
-#u19519-34
+#u19519-32
 {
 	z-index: 163;
 	width: 542px;
@@ -1073,31 +1474,210 @@
 	font-weight: 700;
 }
 
-#u19519-7,#u19519-14,#u19519-21
+#u24373-4
+{
+	z-index: 171;
+	width: 107px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+}
+
+#u24373-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 107px;
+	margin: 0px;
+}
+
+#u24373-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 107px;
+	margin: 0px;
+}
+
+#u24373-4:hover p,#u24373-4:hover span,#u24373-4:active p,#u24373-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24360,#u24381
+{
+	margin-top: 4px;
+	margin-bottom: -4px;
+}
+
+#u24379-4
+{
+	z-index: 182;
+	width: 85px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+}
+
+#u24379-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 85px;
+	margin: 0px;
+}
+
+#u24379-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 85px;
+	margin: 0px;
+}
+
+#u24379-4:hover p,#u24379-4:hover span,#u24379-4:active p,#u24379-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u19519-6,#u19519-12,#u19519-18
 {
 	font-family: quicksand, sans-serif;
 	font-weight: 300;
 }
 
-#u19721-3,#u19721-7,#u19721-11,#u19519-3,#u19519-10,#u19519-17
+#u19721-4,#u19721-5,#u19519-3,#u19519-9,#u19519-15
 {
 	color: #E2E2E2;
 }
 
-#u19519-4,#u19519-11,#u19519-18
+#u24385-4
+{
+	z-index: 193;
+	width: 61px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+}
+
+#u24385-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 61px;
+	margin: 0px;
+}
+
+#u24385-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 61px;
+	margin: 0px;
+}
+
+#u24385-4:hover p,#u24385-4:hover span,#u24385-4:active p,#u24385-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u19519-4,#u19519-5,#u19519-10,#u19519-11,#u19519-16,#u19519-17
 {
 	text-decoration: none;
 	color: #E2E2E2;
 }
 
-#u19519-9,#u19519-16,#u19519-23,#u19519-25,#u19519-27,#u19519-29,#u19519-31
+#u24375,#u24393
+{
+	margin-top: 3px;
+	margin-bottom: -3px;
+}
+
+#u24391-4
+{
+	z-index: 201;
+	width: 86px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #464648;
+	padding: 1px;
+	text-align: left;
+	line-height: 14px;
+	color: #000000;
+}
+
+#u24391-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 86px;
+	margin: 0px;
+}
+
+#u24391-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 86px;
+	margin: 0px;
+}
+
+#u24391-4:hover p,#u24391-4:hover span,#u24391-4:active p,#u24391-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24344,#u24345,#u24346,#u24347,#u24348,#u24349,#u24341,#u24342,#u24343,#u24373,#u24379,#u24385,#u24391
+{
+	font-size: 14px;
+	font-family: quicksand, sans-serif;
+	font-weight: 400;
+}
+
+#u19519-8,#u19519-14,#u19519-21,#u19519-23,#u19519-25,#u19519-27,#u19519-29
 {
 	color: #E2E2E2;
 	font-family: quicksand, sans-serif;
 	font-weight: 300;
 }
 
-#u19519-32
+#u19519-30
 {
 	font-size: 14px;
 	font-family: quicksand, sans-serif;
