--- a/css/iefonts_index.css
+++ b/css/iefonts_index.css
@@ -8,17 +8,17 @@
 	font-family: quicksand-n4, sans-serif;
 }
 
-#u15350-9
+#u15350-7
 {
 	font-family: quicksand-i4, sans-serif;
 }
 
-#u15350-7
+#u15350-5
 {
 	font-family: quicksand-n7, sans-serif;
 }
 
-#u15350,#u15350-2,#u15350-5,#u12744-6
+#u15350,#u15350-2,#u24402,#u24402-2,#u15350-3,#u12744-6
 {
 	font-family: quicksand-n4, sans-serif;
 }
