--- a/css/betweenspaces.css
+++ b/css/betweenspaces.css
@@ -1,7 +1,7 @@
 .version.betweenspaces /* version checker */
 {
-	color: #0000F2;
-	background-color: #6BD868;
+	color: #0000ED;
+	background-color: #4CFADC;
 }
 
 #muse_css_mq
@@ -178,7 +178,7 @@
 
 #slideshowu20260
 {
-	z-index: 178;
+	z-index: 242;
 	width: 0.01px;
 	height: 320px;
 	position: relative;
@@ -188,12 +188,12 @@
 
 #u20282popup
 {
-	z-index: 179;
+	z-index: 243;
 }
 
 #u20392
 {
-	z-index: 180;
+	z-index: 244;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -205,7 +205,7 @@
 
 #u20412
 {
-	z-index: 182;
+	z-index: 246;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -217,12 +217,12 @@
 
 #u20281-9popup
 {
-	z-index: 184;
+	z-index: 248;
 }
 
 #u20280-9popup
 {
-	z-index: 193;
+	z-index: 257;
 }
 
 .SSFirstButton,.SSPreviousButton,.SSNextButton,.SSLastButton,.SSSlideLink,.SSCloseButton /* slideshowFreeStyle */
@@ -244,7 +244,7 @@
 
 #u20434
 {
-	z-index: 202;
+	z-index: 266;
 	width: 570px;
 	background-color: transparent;
 	position: relative;
@@ -253,7 +253,7 @@
 
 #slideshowu19908
 {
-	z-index: 98;
+	z-index: 162;
 	width: 0.01px;
 	height: 320px;
 	position: relative;
@@ -263,12 +263,12 @@
 
 #u19945popup
 {
-	z-index: 99;
+	z-index: 163;
 }
 
 #u20180
 {
-	z-index: 100;
+	z-index: 164;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -280,7 +280,7 @@
 
 #u20200
 {
-	z-index: 102;
+	z-index: 166;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -292,7 +292,7 @@
 
 #u20140
 {
-	z-index: 104;
+	z-index: 168;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -304,7 +304,7 @@
 
 #u20160
 {
-	z-index: 106;
+	z-index: 170;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -322,7 +322,7 @@
 
 #u20220
 {
-	z-index: 108;
+	z-index: 172;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -339,17 +339,17 @@
 
 #u19967-9popup
 {
-	z-index: 110;
+	z-index: 174;
 }
 
 #u19909-9popup
 {
-	z-index: 119;
+	z-index: 183;
 }
 
 #slideshowu20501
 {
-	z-index: 128;
+	z-index: 192;
 	width: 0.01px;
 	height: 320px;
 	margin-left: 489px;
@@ -359,12 +359,12 @@
 
 #u20523popup
 {
-	z-index: 129;
+	z-index: 193;
 }
 
 #u20633
 {
-	z-index: 130;
+	z-index: 194;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -382,7 +382,7 @@
 
 #u20653
 {
-	z-index: 132;
+	z-index: 196;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -394,12 +394,12 @@
 
 #u20522-9popup
 {
-	z-index: 134;
+	z-index: 198;
 }
 
 #u20521-9popup
 {
-	z-index: 143;
+	z-index: 207;
 }
 
 #u19890-13
@@ -445,14 +445,14 @@
 	font-style: italic;
 }
 
-#pu19891-63
+#pu19891-47
 {
 	width: 0.01px;
 	margin-left: -109px;
 	margin-top: -95px;
 }
 
-#u19891-63
+#u19891-47
 {
 	z-index: 35;
 	width: 569px;
@@ -478,17 +478,622 @@
 	letter-spacing: 1px;
 }
 
-#u19891-5,#u19891-9,#u19891-14,#u19891-20,#u19891-28,#u19891-32,#u19891-37,#u19891-43,#u19891-47
+#u19891-5
+{
+	text-decoration: none;
+	letter-spacing: 1px;
+}
+
+#u24413-4
+{
+	z-index: 44;
+	width: 84px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24413-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 84px;
+	margin: 0px;
+}
+
+#u24413-4:hover p,#u24413-4:hover span,#u24413-4:active p,#u24413-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24443-4
+{
+	z-index: 50;
+	width: 147px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24443-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 147px;
+	margin: 0px;
+}
+
+#u24443-4:hover p,#u24443-4:hover span,#u24443-4:active p,#u24443-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24449-4
+{
+	z-index: 58;
+	width: 118px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24449-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 118px;
+	margin: 0px;
+}
+
+#u24449-4:hover p,#u24449-4:hover span,#u24449-4:active p,#u24449-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24419-4
+{
+	z-index: 66;
+	width: 84px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24419-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 84px;
+	margin: 0px;
+}
+
+#u24413-4:active,#u24419-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 84px;
+	margin: 0px;
+}
+
+#u24419-4:hover p,#u24419-4:hover span,#u24419-4:active p,#u24419-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24485-4
+{
+	z-index: 72;
+	width: 101px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24485-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 101px;
+	margin: 0px;
+}
+
+#u24485-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 101px;
+	margin: 0px;
+}
+
+#u24485-4:hover p,#u24485-4:hover span,#u24485-4:active p,#u24485-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24497-4
+{
+	z-index: 80;
+	width: 81px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24497-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 81px;
+	margin: 0px;
+}
+
+#u24497-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 81px;
+	margin: 0px;
+}
+
+#u24497-4:hover p,#u24497-4:hover span,#u24497-4:active p,#u24497-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24455-4
+{
+	z-index: 88;
+	width: 118px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24455-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 118px;
+	margin: 0px;
+}
+
+#u24455-4:hover p,#u24455-4:hover span,#u24455-4:active p,#u24455-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24461-4
+{
+	z-index: 94;
+	width: 70px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24461-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 70px;
+	margin: 0px;
+}
+
+#u24461-4:hover p,#u24461-4:hover span,#u24461-4:active p,#u24461-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24467-4
+{
+	z-index: 102;
+	width: 70px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24467-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 70px;
+	margin: 0px;
+}
+
+#u24461-4:active,#u24467-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 70px;
+	margin: 0px;
+}
+
+#u24467-4:hover p,#u24467-4:hover span,#u24467-4:active p,#u24467-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24503-4
+{
+	z-index: 108;
+	width: 108px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24503-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 108px;
+	margin: 0px;
+}
+
+#u24503-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 108px;
+	margin: 0px;
+}
+
+#u24503-4:hover p,#u24503-4:hover span,#u24503-4:active p,#u24503-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24479-4
+{
+	z-index: 116;
+	width: 73px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24479-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 73px;
+	margin: 0px;
+}
+
+#u24479-4:hover p,#u24479-4:hover span,#u24479-4:active p,#u24479-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u19891-29
 {
 	text-decoration: none;
 }
 
-#u19891-53
+#u24473-4
+{
+	z-index: 123;
+	width: 147px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24473-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 147px;
+	margin: 0px;
+}
+
+#u24443-4:active,#u24473-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 147px;
+	margin: 0px;
+}
+
+#u24473-4:hover p,#u24473-4:hover span,#u24473-4:active p,#u24473-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24509-4
+{
+	z-index: 131;
+	width: 118px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24509-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 118px;
+	margin: 0px;
+}
+
+#u24449-4:active,#u24455-4:active,#u24509-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 118px;
+	margin: 0px;
+}
+
+#u24509-4:hover p,#u24509-4:hover span,#u24509-4:active p,#u24509-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24415,#u24445,#u24451,#u24421,#u24487,#u24499,#u24457,#u24463,#u24469,#u24505,#u24481,#u24475,#u24511,#u24517
+{
+	margin-top: 3px;
+	margin-bottom: -3px;
+}
+
+#u24515-4
+{
+	z-index: 137;
+	width: 73px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24515-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 73px;
+	margin: 0px;
+}
+
+#u24479-4:active,#u24515-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 73px;
+	margin: 0px;
+}
+
+#u24515-4:hover p,#u24515-4:hover span,#u24515-4:active p,#u24515-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u19891-37
 {
 	letter-spacing: -1px;
 }
 
-#u19891-12,#u19891-18,#u19891-24,#u19891-26,#u19891-35,#u19891-41,#u19891-51,#u19891-55,#u19891-56,#u19891-60,#u19891-61
+#u19891-41
+{
+	font-size: 1px;
+	line-height: 0px;
+}
+
+#u24521-4
+{
+	z-index: 150;
+	width: 110px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24521-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 110px;
+	margin: 0px;
+}
+
+#u24521-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 110px;
+	margin: 0px;
+}
+
+#u24521-4:hover p,#u24521-4:hover span,#u24521-4:active p,#u24521-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24527-4
+{
+	z-index: 156;
+	width: 114px;
+	min-height: 11px;
+	border-width: 0px;
+	border-color: transparent;
+	background-color: #EBEBEB;
+	padding: 1px;
+	text-align: left;
+	color: #000000;
+	line-height: 14px;
+}
+
+#u24527-4:hover
+{
+	background-color: #66C89F;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 114px;
+	margin: 0px;
+}
+
+#u24527-4:active
+{
+	background-color: #8FE7C2;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	min-height: 11px;
+	width: 114px;
+	margin: 0px;
+}
+
+#u24527-4:hover p,#u24527-4:hover span,#u24527-4:active p,#u24527-4:active span
+{
+	color: #FFFFFF;
+	visibility: inherit;
+}
+
+#u24413,#u24443,#u24449,#u24419,#u24485,#u24497,#u24455,#u24461,#u24467,#u24503,#u24479,#u24473,#u24509,#u24515,#u24521,#u24527
+{
+	font-size: 14px;
+	font-family: quicksand, sans-serif;
+	font-weight: 300;
+}
+
+#u19891-8,#u19891-11,#u19891-15,#u19891-18,#u19891-22,#u19891-26,#u19891-31,#u19891-35,#u19891-39,#u19891-40,#u19891-44,#u19891-45
 {
 	line-height: 21px;
 	font-family: quicksand, sans-serif;
@@ -497,7 +1102,7 @@
 
 #slideshowu20832
 {
-	z-index: 152;
+	z-index: 216;
 	width: 0.01px;
 	height: 320px;
 	position: relative;
@@ -516,12 +1121,12 @@
 
 #u20846popup
 {
-	z-index: 153;
+	z-index: 217;
 }
 
 #u20913
 {
-	z-index: 154;
+	z-index: 218;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -539,7 +1144,7 @@
 
 #u20960
 {
-	z-index: 156;
+	z-index: 220;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -551,7 +1156,7 @@
 
 #u20933
 {
-	z-index: 158;
+	z-index: 222;
 	width: 570px;
 	height: 320px;
 	border-width: 0px;
@@ -575,16 +1180,16 @@
 	border-color: transparent;
 	background-color: transparent;
 	padding: 10px;
-	line-height: 42px;
 	color: #999999;
 	text-align: center;
 	font-size: 30px;
+	line-height: 42px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 }
 
 #u20834-9popup
 {
-	z-index: 160;
+	z-index: 224;
 }
 
 #u20280-9,#u19909-9,#u20521-9,#u20833-9
@@ -596,17 +1201,17 @@
 	border-color: transparent;
 	background-color: transparent;
 	padding: 10px;
-	line-height: 42px;
 	color: #999999;
 	text-align: center;
 	font-size: 30px;
+	line-height: 42px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	left: 340px;
 }
 
 #u20833-9popup
 {
-	z-index: 169;
+	z-index: 233;
 }
 
 .html
